syntax = "proto3";

package yandex.cloud.audit.audittrails;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "yandex/cloud/audit/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/audit/audittrails;audittrails";
option java_package = "yandex.cloud.api.audit.audittrails";
option java_outer_classname = "AuditTrailsEvents";

message CreateTrail {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    string trail_id = 1 [(required) = true];
    string trail_name = 2 [(required) = true];
    Destination destination = 4;
    string service_account_id = 5;
    TrailStatus status = 6;
    PathFilter path_filter = 7;
  }
}

message UpdateTrail {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    string trail_id = 1 [(required) = true];
    string trail_name = 2 [(required) = true];
    Destination destination = 4;
    string service_account_id = 5;
    TrailStatus status = 6;
    PathFilter path_filter = 7;
  }
}

message DeleteTrail {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    string trail_id = 1 [(required) = true];
    string trail_name = 2 [(required) = true];
    Destination destination = 4;
    string service_account_id = 5;
    TrailStatus status = 6;
    PathFilter path_filter = 7;
  }
}

message SetTrailAccessBindings {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    string trail_id = 1 [(required) = true];
    string trail_name = 2 [(required) = true];
    repeated AccessBinding access_bindings = 4;
    repeated AccessBindingDelta access_binding_deltas = 5;
  }
}

message UpdateTrailAccessBindings {
  string event_id = 1 [(required) = true];
  string event_source = 2 [(required) = true];
  string event_type = 3 [(required) = true];
  google.protobuf.Timestamp event_time = 4 [(required) = true];
  Authentication authentication = 5 [(required) = true];
  Authorization authorization = 6 [(required) = true];
  ResourceMetadata resource_metadata = 7 [(required) = true];
  RequestMetadata request_metadata = 8 [(required) = true];
  EventStatus event_status = 9 [(required) = true];
  google.rpc.Status error = 10;
  EventDetails details = 11 [(required) = true];
  google.protobuf.Struct request_parameters = 12;
  google.protobuf.Struct response = 13;

  message EventDetails {
    string trail_id = 1 [(required) = true];
    string trail_name = 2 [(required) = true];
    repeated AccessBinding access_bindings = 4;
    repeated AccessBindingDelta access_binding_deltas = 5;
  }
}


message Destination {
  oneof destination {
    ObjectStorage object_storage = 1;
    CloudLogging cloud_logging = 3;
    DataStream data_stream = 4;
  }
}

message ObjectStorage {
  string bucket_id = 1;
  string object_prefix = 2;
}

message CloudLogging {
  oneof destination {
    string log_group_id = 1;
    string folder_id = 2;
  }
}

message DataStream {
  string database_id = 1;
  string stream_name = 2;
}

message PathFilter {
  PathFilterElement root = 1 [(required) = true];
}

message PathFilterElement {
  oneof element {
    option (exactly_one) = true;
    PathFilterElementAny any_filter = 1;
    PathFilterElementSome some_filter = 2;
  }
}

message PathFilterElementAny {
  Resource resource = 1 [(required) = true];
}

message PathFilterElementSome {
  Resource resource = 1 [(required) = true];
  repeated PathFilterElement filters = 2 [(size)=">0"];
}

message Resource {
  string id = 1 [(required) = true, (length) = "<=64"];
  string type = 2 [(required) = true, (length) = "<=50"];
  string name = 3;
}

enum TrailStatus {
  TRAIL_STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;
  ERROR = 2;
  DELETED = 3;
}
